Hid overflow of nav ul to stop page from having horizontal scroll bar, removed min-width from nav buttons. Will replace with media query

--- a/flask/2025_11_03_Rugby_Website/project/static/style.css
+++ b/flask/2025_11_03_Rugby_Website/project/static/style.css
@@ -156,6 +156,7 @@ nav ul {
     justify-content: space-evenly;
     align-content: center;
     height: 100%;
+    overflow: hidden;
 }
 
 nav ul li {
@@ -168,7 +169,7 @@ nav ul li {
     align-items: center;
     width: 100%;
     height: 100%;
-    min-width: 22rem;
+    /*min-width: 22rem;*/
 }
 
 nav ul li a{
